--- a/src/panel/component/header.html
+++ b/src/panel/component/header.html
@@ -1,6 +1,6 @@
-<header class="intro">
+<header>
 
-        <div class="intro">ORION</div>
+        <div>ORION</div>
 
         <i class="fa fa-user fa-2x" style="color: white;" id="tooltip" ></i>
 
