--- a/src/panel/css/login/banner.css
+++ b/src/panel/css/login/banner.css
@@ -1,17 +1,24 @@
 #banner{
+    
     height: 100%;
     width: 75%;
     display: flex;
     justify-content: center;
     align-items: center;
+    
+
+    background: rgb(250,250,250);
+    background: linear-gradient(218deg, rgba(250,250,250,1) 0%, rgba(255,255,255,1) 0%, rgba(18,174,255,1) 80%);
+
+
 }
 
 #banner div{
-    height: 500px;
+    height: 60%;
 }
 
 #banner div img{
-    height: 400px;
+    height: 80%;
 }
 
 #banner div p{
