--- a/src/panel/css/login/container.css
+++ b/src/panel/css/login/container.css
@@ -2,6 +2,7 @@
     height: 100%;
     width: 25%;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.2), 0 4px 4px 0 rgba(0, 0, 0, 0.2);    
+    background-color: white;
 }
 
 
@@ -22,13 +23,5 @@
     align-items: center;
 }
 
-i{
-    color: #7456F1;
-    margin: 10px;
-    cursor: pointer;
-}
 
-i:hover{
-    color: blue;
-}
 
