--- a/src/panel/css/app/all.css
+++ b/src/panel/css/app/all.css
@@ -1,3 +1,5 @@
+@import "media.css";
+
 #app_html{
     height: 100%;
     width: 100%;
@@ -35,6 +37,6 @@
 }
 
 #app_html>section>img{
-    height: 80%;
+    height: 400px;
     padding: 30px;
 }
