--- a/src/panel/css/app/all.css
+++ b/src/panel/css/app/all.css
@@ -1,5 +1,3 @@
-@import "media.css";
-
 #app_html{
     height: 100%;
     width: 100%;
@@ -40,3 +38,37 @@
     height: 400px;
     padding: 30px;
 }
+
+
+@media only screen and (max-width: 1200px) 
+{
+
+    #app_html{
+        height: 700px;
+    }
+
+    #app_html>section>div>img{
+        display: none;
+    }
+
+    #app_html>section{
+        flex-direction: column;
+        width: 90%;
+        height: 90%;
+        align-items: center;
+        justify-content: center;
+
+    }
+
+    #app_html>section>div{
+        height: 55%;
+        width: 100%;
+        justify-content: flex-start;
+
+    }
+
+  
+
+}
+
+
