--- a/src/panel/css/app/all.css
+++ b/src/panel/css/app/all.css
@@ -35,7 +35,7 @@
 }
 
 #app_html>section>img{
-    height: 400px;
+    height: 80%;
     padding: 30px;
 }
 
@@ -65,6 +65,11 @@
         width: 100%;
         justify-content: flex-start;
 
+    }
+
+    #app_html>section>img{
+        height: 50%;
+        padding: 0;
     }
 
   
